fix: header z-index #318

--- a/src/components/index.less
+++ b/src/components/index.less
@@ -2,3 +2,4 @@
 
 // The prefix to use on all css classes from ant-pro.
 @ant-pro-prefix             : ant-pro;
+@ant-global-header-zindex   : 105;
